        System: added login options to Login with Google button
        System: added mbstring extension to the system requirements list
		System: fixed text alginment in module menu
		System: fixed long-string and large image issue causing content to bleed under sidebar
		System: fixed bug causing two entries in a module menu to be highlighted as active in some cases
		Activities: added new payment fields to activities (cost type and cost status)
		Activities: fixed database field length issue in gibbonActivityStaff
		Attendance: fixed GROUP BY issue in moduleFunctions.php when MySQL is using only_full_group_by
		Attendance: adjusted attendance checking CLI script to only include lessons whose start time has already passed
		Attendance: show staff dashboard link to attendance only if user has access to Form Group attendance
		Attendance: added count column to Students Not Present and Students Not Onsite reports
		Attendance: granted like to those students who successfully self register
		Attendance: added selective auto-redirect to move students to self-registration page under certain conditions
		Attendance: added a warning to Attendance by Class when not currently timetabled for the selected date
		Behaviour: fixed typo in three settings
		Departments: fixed bug preventing students from seeing other students in a class
		Finance: set name of outgoing email to school name, not user's name
		Individual Needs: added ability to record educational assistants for a student
		Library: added Optical Media as item type
		Library: added replacement fields to import
		Messenger: fixed multibyte substring issue in homepage widget
		Planner: updated attendance to only hide the reason and comment fields if Present is the default attendance
		Roll Groups: fixed bug preventing alerts from showing
		Rubrics: reduced wait time on rubric load for schools with lots of rubric data
		School Admin: updated Manage School Years to prevent removing or unsetting the current School Year